Cleanup - testing repo name change

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header id="homeHeader" class="homeHeaderFooter">
   <div class="bs-container">
-    <img src="/assets/img/kg-logo.png" />
+    <img src="assets/img/kg-logo.png" />
   </div>
 </header>
 
