dynamically add/remove counter in header

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -45,7 +45,7 @@
         <div class="stepHeading" [ngClass]="{'tenSteps' : counter>9}">
           <ng-container *ngIf="currentPageContent">
             <h1 class="ng-binding mw568" dir={{pageGetparameters.dir}}>
-              <span class="ng-binding" *ngIf="counter>0 && !displayForm && showCounter">{{counter}}</span>
+              <span class="ng-binding" *ngIf="counter>0 && !displayForm && headerCounter">{{headerCounter}}</span>
               {{currentPageContent?.heading}}
             </h1>
           </ng-container>
