add class if headerCounter is present

--- a/src/app/page/page.component.html
+++ b/src/app/page/page.component.html
@@ -44,7 +44,7 @@
       <ng-container *ngIf="!FirstPage && !LastPage && !displayModel">
         <div class="stepHeading" [ngClass]="{'tenSteps' : counter>9}">
           <ng-container *ngIf="currentPageContent">
-            <h1 class="ng-binding mw568" dir={{pageGetparameters.dir}}>
+            <h1 [ngClass]="{'headerCounter' : headerCounter != null }" class="ng-binding mw568" dir={{pageGetparameters.dir}}>
               <span class="ng-binding" *ngIf="counter>0 && !displayForm && headerCounter">{{headerCounter}}</span>
               {{currentPageContent?.heading}}
             </h1>
